###### TWE 4.4-1 RELEASED ######
2011-12-15 Sasa Bojanic <sasaboy@together.at>
  # WfXML: URL sample displayed
  # Icon and Title now appears in Help->Manual dialog

2011-12-07 Sasa Bojanic <sasaboy@together.at>
   # Updated configure.bat script not to have default values for VERSION/RELEASE and not to override 
     the values in version.properties file unless explicitely specified by configure script argument

2011-12-02 Sasa Bojanic <sasaboy@together.at>
   # Linux builds improvement
   # NSIS and exe installation improvement

2011-12-01 Sasa Bojanic <sasaboy@together.at>
   # Java7 compatibility:
      - refactored getType/setType methods of JaWEComponent interface to getComponentType/setComponentType
      - replaced propriatary SUN classes for JPEG handling (from com.sun.image.codec.jpeg package) with
        ImageIO API (SaveAsJPG.java)

2011-11-30 Sasa Bojanic <sasaboy@together.at>
   # Updated commons-io library to version 2.1
   # Updated itext5 to version 5.13
   # build procedure will now put the twe-patches and twe-restriction files to the proper places
     when such files should be generated for TXM

2011-10-26 Sasa Bojanic <sasaboy@together.at>
   # Copyright and Trademark sentences updated
   # No dependency targets and dependency output anymore

2011-10-18 Sasa Bojanic <sasaboy@together.at>
   # Project re-structured and build procedure updated to conform to the "components" standard

###### TWE 4.3-1 RELEASED ######
2011-09-29 Sasa Bojanic <sasaboy@together.at>   
   # LDAPPageSize option added to the configuration - now searches will not return partial results 
     because of LDAP server's size limit

###### TWE 4.2-1 RELEASED ######
2011-09-19 Sasa Bojanic <sasaboy@together.at>
   # Code modified to support WfXML access through HTTPS
   # TXM updated to version 1.2-1
   
2011-08-30 Sasa Bojanic <sasaboy@together.at>
   # try/catch blocks removed from build.xml files

2011-08-19 Sasa Bojanic <sasaboy@together.at>