@@ -26,6 +26,8 @@ ERROR_SYSTEM_PARTICIPANT_PERFORMER_FOR_NO_IMPLEMENTATION_ACTIVITY=Sistemski u\u0
 
 WARNING_TOOL_AGENT_CLASS_NOT_DEFINED=Atribut za tool agent klasu nije definisan
 
+ERROR_DESCRIPTION_TOO_LONG=Opis ne sme biti du\u017Ei od 255 karaktera
+
 ToolAgentClassKey=Tool agent
 ApplicationNameKey=Ime aplikacije
 ApplicationModeKey=Mode aplikacije
