@@ -1,38 +1,40 @@
 /**
-* Together Workflow Editor
-* Copyright (C) 2011 Together Teamsolutions Co., Ltd. 
-* 
-* This program is free software: you can redistribute it and/or modify 
-* it under the terms of the GNU General Public License as published by 
-* the Free Software Foundation, either version 3 of the License, or 
-* (at your option) any later version. 
-*
-* This program is distributed in the hope that it will be useful, 
-* but WITHOUT ANY WARRANTY; without even the implied warranty of 
-* MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the 
-* GNU General Public License for more details. 
-*
-* You should have received a copy of the GNU General Public License 
-* along with this program. If not, see http://www.gnu.org/licenses
-*/
+ * Together Workflow Editor
+ * Copyright (C) 2011 Together Teamsolutions Co., Ltd. 
+ * 
+ * This program is free software: you can redistribute it and/or modify 
+ * it under the terms of the GNU General Public License as published by 
+ * the Free Software Foundation, either version 3 of the License, or 
+ * (at your option) any later version. 
+ *
+ * This program is distributed in the hope that it will be useful, 
+ * but WITHOUT ANY WARRANTY; without even the implied warranty of 
+ * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the 
+ * GNU General Public License for more details. 
+ *
+ * You should have received a copy of the GNU General Public License 
+ * along with this program. If not, see http://www.gnu.org/licenses
+ */
 
 package org.enhydra.jawe.shark;
 
-
-
 /**
  * @author Sasa Bojanic
- *
  */
 public final class SharkValidationErrorIds {
 
-   public static final String ERROR_SCRIPT_NOT_DEFINED="ERROR_SCRIPT_NOT_DEFINED";
-   public static final String ERROR_UNSUPPORTED_SCRIPT="ERROR_UNSUPPORTED_SCRIPT";
-   public static final String ERROR_UNSUPPORTED_DATA_TYPE="ERROR_UNSUPPORTED_DATA_TYPE";
-  
-   public static final String ERROR_MANUAL_START_MODE_FOR_TOOL_ACTIVITY_WITH_SYSTEM_PARTICIPANT_PERFORMER="ERROR_MANUAL_START_MODE_FOR_TOOL_ACTIVITY_WITH_SYSTEM_PARTICIPANT_PERFORMER";   
-   public static final String ERROR_SYSTEM_PARTICIPANT_PERFORMER_FOR_NO_IMPLEMENTATION_ACTIVITY="ERROR_SYSTEM_PARTICIPANT_PERFORMER_FOR_NO_IMPLEMENTATION_ACTIVITY";   
+   public static final String ERROR_SCRIPT_NOT_DEFINED = "ERROR_SCRIPT_NOT_DEFINED";
 
-   public static final String WARNING_TOOL_AGENT_CLASS_NOT_DEFINED="WARNING_TOOL_AGENT_CLASS_NOT_DEFINED";   
+   public static final String ERROR_UNSUPPORTED_SCRIPT = "ERROR_UNSUPPORTED_SCRIPT";
+
+   public static final String ERROR_UNSUPPORTED_DATA_TYPE = "ERROR_UNSUPPORTED_DATA_TYPE";
+
+   public static final String ERROR_MANUAL_START_MODE_FOR_TOOL_ACTIVITY_WITH_SYSTEM_PARTICIPANT_PERFORMER = "ERROR_MANUAL_START_MODE_FOR_TOOL_ACTIVITY_WITH_SYSTEM_PARTICIPANT_PERFORMER";
+
+   public static final String ERROR_SYSTEM_PARTICIPANT_PERFORMER_FOR_NO_IMPLEMENTATION_ACTIVITY = "ERROR_SYSTEM_PARTICIPANT_PERFORMER_FOR_NO_IMPLEMENTATION_ACTIVITY";
+
+   public static final String WARNING_TOOL_AGENT_CLASS_NOT_DEFINED = "WARNING_TOOL_AGENT_CLASS_NOT_DEFINED";
+
+   public static final String ERROR_DESCRIPTION_TOO_LONG = "ERROR_DESCRIPTION_TOO_LONG";
 
 }
